Small alignment issues corrected

--- a/template/templates/soh/css/layout.css
+++ b/template/templates/soh/css/layout.css
@@ -70,6 +70,7 @@
 }
 
 #top {
+	margin-top: -15px;
 	padding-right: 43px;
 }
 
